--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </script>
         
         <!-- Ссылка для возврата в приложение -->
-        <a href="zudo://app">Вернуться в приложение</a>
+        <a href="zudo://app/executor/executorProfile/">Вернуться в приложение</a>
         <!-- Замените ссылку на пример Deep Linking на свою собственную -->
     </div>
 </body>
