--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div style="text-align: center; padding: 20px;">
-        <h1>Данные об оплате</h1>
+        <h1>Ви успішно оплатили категорію</h1>
         
         <!-- Используем JavaScript для вывода данных -->
         <script>
